@@ -56,7 +56,6 @@ For bugs reported before this time, see 3_8_BUGSTATUS.txt
         Probable wontfix
 333434  In some weird corner case Valgrind cannot execute
         executable files symlinked by /proc/self/fd (related to 331311?)
-331476  Patch to handle ioctl 0x5422 on Linux (x86 and amd64) (landable?)
 331829  Unexpected ioctl opcode sign extension
 333051  handling hugepages (is largely broken)
 333788  Valgrind does not support the CDROM_DISC_STATUS ioctl (has patch)
